--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,21 @@
 server.port = 9090
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/revaturedb
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/revaturedb
+#spring.datasource.username=root
+#spring.datasource.password=root
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.format_sql = true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.format_sql = true
+#spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
+
+#Postgres localhost
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
